--- a/Automation/Automation.App/Views/ScopeUI/ScopeEdit.xaml
+++ b/Automation/Automation.App/Views/ScopeUI/ScopeEdit.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     MinHeight="300"
     MinWidth="300"
-    xmlns:viewModels="clr-namespace:Automation.Base.ViewModels;assembly=Automation.Base"
+    xmlns:viewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
     xmlns:data="clr-namespace:Automation.App.Components.Data"
     d:DataContext="{d:DesignInstance viewModels:Scope}">
     <Grid Margin="4">
