Created generic interface for supervisor

--- a/Automation/Automation.App/Views/Modal.xaml
+++ b/Automation/Automation.App/Views/Modal.xaml
@@ -29,7 +29,7 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
-                <Grid>
+                <Grid Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition Width="auto" />
