--- a/Automation/Automation.App/Views/ScopeUI/ScopeEdit.xaml
+++ b/Automation/Automation.App/Views/ScopeUI/ScopeEdit.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.ScopeUI.ScopeEdit"
+    x:Class="Automation.App.Views.ScopeUI.ScopedEdit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
     MinWidth="300"
     xmlns:viewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
     xmlns:data="clr-namespace:Automation.App.Components.Data"
-    d:DataContext="{d:DesignInstance viewModels:Scope}">
+    d:DataContext="{d:DesignInstance viewModels:ScopedElement}">
     <Grid Margin="4">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
