--- a/Automation/Automation.App/Views/TaskUI/TaskPage.xaml
+++ b/Automation/Automation.App/Views/TaskUI/TaskPage.xaml
@@ -5,8 +5,42 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:data="clr-namespace:Automation.App.Components.Data"
+    xmlns:display="clr-namespace:Automation.App.Components.Display"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
-    <data:DataVisualizer />
+    xmlns:viewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
+    d:DataContext="{d:DesignInstance viewModels:ScopedNode}">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock
+                Margin="4"
+                Text="{Binding Name}"
+                FontWeight="Bold"
+                FontSize="14" />
+
+            <StackPanel
+                Grid.Column="1"
+                Orientation="Horizontal"
+                Margin="2">
+                <Button Click="ButtonParam_Click" Margin="2,0,0,0">
+                    <TextBlock Text="{x:Static display:IconFont.Gear}" FontFamily="{StaticResource FontAwesomeSolid}" />
+                </Button>
+            </StackPanel>
+        </Grid>
+        <TabControl Grid.Row="1">
+            <TabItem Header="Scheduler" />
+            <TabItem Header="History">
+                <data:TaskInstanceTable TaskId="{Binding NodeId}" Margin="-6" />
+            </TabItem>
+        </TabControl>
+    </Grid>
 </UserControl>
