--- a/Automation/Automation.App/Components/Data/DataVisualizer.xaml
+++ b/Automation/Automation.App/Components/Data/DataVisualizer.xaml
@@ -5,8 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Components.Data"
-    xmlns:display="clr-namespace:Automation.App.Components.Display"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
@@ -48,16 +48,10 @@
                         Grid.Column="2"
                         HorizontalAlignment="Right">
                         <Button Style="{StaticResource IconButtonSmall}" Margin="0,0,1,0">
-                            <TextBlock
-                                FontSize="10"
-                                FontFamily="{StaticResource FontAwesomeSolid}"
-                                Text="{x:Static display:IconFont.Plus}" />
+                            <fonts:Icon FontSize="10" Text="{x:Static fonts:IconFont.Plus}" />
                         </Button>
                         <Button Style="{StaticResource IconButtonSmall}">
-                            <TextBlock
-                                FontSize="10"
-                                FontFamily="{StaticResource FontAwesomeSolid}"
-                                Text="{x:Static display:IconFont.Trash}" />
+                            <fonts:Icon FontSize="10" Text="{x:Static fonts:IconFont.Trash}" />
                         </Button>
                     </StackPanel>
                 </Grid>
@@ -90,10 +84,7 @@
                         Text="{Binding Value}"
                         Background="Transparent" />
                     <Button Grid.Column="2" Style="{StaticResource IconButtonSmall}">
-                        <TextBlock
-                            FontSize="10"
-                            FontFamily="{StaticResource FontAwesomeSolid}"
-                            Text="{x:Static display:IconFont.Trash}" />
+                        <fonts:Icon FontSize="10" Text="{x:Static fonts:IconFont.Trash}" />
                     </Button>
                 </Grid>
             </DataTemplate>
