--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.ScopeUI.ScopedEdit"
+    x:Class="Automation.App.Views.TasksPages.ScopeUI.ScopedEdit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.TaskUI"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.TaskUI"
     mc:Ignorable="d"
     MinHeight="300"
     MinWidth="300"
