--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopePage.xaml
@@ -1,11 +1,12 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.ScopeUI.ScopePage"
+    x:Class="Automation.App.Views.TasksPages.ScopeUI.ScopePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d"
-    xmlns:display="clr-namespace:Automation.App.Components.Display"
+    xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
     xmlns:viewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
     d:DataContext="{d:DesignInstance viewModels:Scope}">
@@ -31,30 +32,33 @@
                 Grid.Column="1"
                 Orientation="Horizontal"
                 Margin="2">
-                <Button Click="ButtonAdd_Click">
+                <Button Click="ButtonAdd_Click" Padding="10,8">
                     <Button.ContextMenu>
                         <ContextMenu Placement="Bottom">
                             <MenuItem Header="Add scope" Click="MenuAddScope_Click">
                                 <MenuItem.Icon>
-                                    <display:NodeIcon Type="Scope" Margin="0,0,4,0" />
+                                    <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
                                 </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="Add workflow" Click="MenuAddWorkflow_Click">
                                 <MenuItem.Icon>
-                                    <display:NodeIcon Type="Workflow" Margin="0,0,4,0" />
+                                    <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
                                 </MenuItem.Icon>
                             </MenuItem>
                             <MenuItem Header="Add task" Click="MenuAddTask_Click">
                                 <MenuItem.Icon>
-                                    <display:NodeIcon Type="Task" Margin="0,0,4,0" />
+                                    <components:NodeIcon Type="Task" Margin="0,0,4,0" />
                                 </MenuItem.Icon>
                             </MenuItem>
                         </ContextMenu>
                     </Button.ContextMenu>
-                    <TextBlock Text="{x:Static display:IconFont.Plus}" FontFamily="{StaticResource FontAwesomeSolid}" />
+                    <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
                 </Button>
-                <Button Click="ButtonParam_Click" Margin="2,0,0,0">
-                    <TextBlock Text="{x:Static display:IconFont.Gear}" FontFamily="{StaticResource FontAwesomeSolid}" />
+                <Button
+                    Click="ButtonParam_Click"
+                    Margin="2,0,0,0"
+                    Padding="8">
+                    <fonts:Icon Text="{x:Static fonts:IconFont.Gear}" />
                 </Button>
             </StackPanel>
         </Grid>
@@ -65,7 +69,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <display:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                        <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
                         <TextBlock Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
