--- a/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowPage.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkflowUI.WorkflowPage"
+    x:Class="Automation.App.Views.TasksPages.WorkflowUI.WorkflowPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkflowUI"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.WorkflowUI"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance local:WorkflowPage}">
     <local:WorkflowGraph EditorData="{Binding Editor, Mode=OneTime}" />
