--- a/Automation/Automation.App/Views/TasksPages/_Components/NodeIcon.xaml
+++ b/Automation/Automation.App/Views/TasksPages/_Components/NodeIcon.xaml
@@ -1,30 +1,28 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.Display.NodeIcon"
+    x:Class="Automation.App.Views.TasksPages.Components.NodeIcon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components.Display"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.Components"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance local:NodeIcon}">
-    <TextBlock
-        FontFamily="{StaticResource FontAwesomeSolid}"
-        VerticalAlignment="Center"
-        DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:NodeIcon}}">
+    <fonts:Icon DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:NodeIcon}}">
         <TextBlock.Style>
-            <Style TargetType="TextBlock">
+            <Style TargetType="fonts:Icon" BasedOn="{StaticResource {x:Type fonts:Icon}}">
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding}" Value="Scope">
-                        <Setter Property="Text" Value="{x:Static local:IconFont.Folder}" />
+                        <Setter Property="Text" Value="{x:Static fonts:IconFont.Folder}" />
                     </DataTrigger>
                     <DataTrigger Binding="{Binding}" Value="Workflow">
-                        <Setter Property="Text" Value="{x:Static local:IconFont.Cubes}" />
+                        <Setter Property="Text" Value="{x:Static fonts:IconFont.Cubes}" />
                     </DataTrigger>
                     <DataTrigger Binding="{Binding}" Value="Task">
-                        <Setter Property="Text" Value="{x:Static local:IconFont.Cube}" />
+                        <Setter Property="Text" Value="{x:Static fonts:IconFont.Cube}" />
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
         </TextBlock.Style>
-    </TextBlock>
+    </fonts:Icon>
 </UserControl>
