--- a/Automation/Automation.App/Views/TasksPages/_Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/TasksPages/_Components/ScopedSelector.xaml
@@ -1,11 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.Inputs.ScopedSelector"
+    x:Class="Automation.App.Views.TasksPages.Components.ScopedSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components.Inputs"
-    xmlns:display="clr-namespace:Automation.App.Components.Display"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.Components"
     xmlns:baseViewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
     xmlns:graph="clr-namespace:Automation.App.ViewModels.Graph"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
@@ -32,14 +31,13 @@
         <TreeView.Resources>
             <HierarchicalDataTemplate DataType="{x:Type baseViewModels:Scope}" ItemsSource="{Binding SortedChildrens}">
                 <StackPanel Orientation="Horizontal">
-
-                    <display:NodeIcon Type="Scope" Margin="0,0,4,0" />
+                    <local:NodeIcon Type="Scope" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
                 </StackPanel>
             </HierarchicalDataTemplate>
             <DataTemplate DataType="{x:Type baseViewModels:ScopedNode}">
                 <StackPanel Orientation="Horizontal">
-                    <display:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                    <local:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
                 </StackPanel>
             </DataTemplate>
